<resources>
    <string name="app_name" translatable="false">Racing Time Manager</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="holder_time" translatable="false">00:00:00</string>
    <string name="holder_time_ms" translatable="false">00:00:00.000</string>
    <string name="holder_stopwatch" translatable="false">StopWatch</string>

    <!-- Common strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="common_select_team">Select team</string>

    <!-- Action bar -->
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_add">Add</string>
    <string name="action_add_team">Add team</string>
    <string name="action_export">Export to XLS</string>
    <string name="action_reset">Reset</string>
    <string name="action_clear">Remove all</string>

    <!-- Race screen -->
    <string name="race_title">@string/app_name</string>
    <string name="race_pit">Pit\n%1$d</string>
    <string name="race_btn_set_car">Car</string>
    <string name="race_btn_set_driver">Driver</string>
    <string name="race_btn_next_session">Next</string>
    <string name="race_btn_undo_session">Undo</string>
    <string name="race_btn_pit">Pit</string>
    <string name="race_btn_out">Out</string>
    <string name="race_on_track">On track</string>
    <string name="race_now">Now</string>
    <string name="race_team_number">Team number</string>

    <!-- Race detail screen -->
    <string name="race_detail_driver">Driver</string>
    <string name="race_detail_car">Car</string>
    <string name="race_detail_start_time">Start time</string>
    <string name="race_detail_duration">Duration</string>
    <string name="race_detail_type">Type</string>

    <!-- Teams screen -->
    <string name="teams_title">Teams</string>
    <string name="teams_name">Name</string>
    <string name="teams_drivers">Drivers</string>
    <string name="teams_remove_all">Remove all teams?</string>
    <string name="teams_team_name">Team name</string>
    <string name="teams_no_drivers">No drivers</string>
    <string name="teams_assign_drivers">Assign drivers</string>

    <!-- Drivers screen -->
    <string name="drivers_title">Drivers</string>
    <string name="drivers_name">Name</string>
    <string name="drivers_team">Team</string>
    <string name="drivers_no_team">No team</string>
    <string name="drivers_remove_all">Remove all drivers?</string>
    <string name="drivers_driver_name">Driver name</string>

    <!-- Cars screen -->
    <string name="cars_title">Cars</string>
    <string name="cars_broken">broken</string>
    <string name="cars_remove_all">Remove all cars?</string>
    <string name="cars_add_car_number">Car number</string>
    <string name="cars_add_car_broken">Car is broken</string>

    <!-- Settings screen -->
    <string name="settings_title">Settings</string>
    <string name="pref_PredefineDriverForPITSTOP">Predefine driver for PIT-STOP from session</string>
    <string name="pref_SelectSessionButtonType">Select type of session button</string>
    <string name="pref_EnableExportXLS">Enable export to Excel (.xls)</string>

    <string name="settings_assign_pitstop_manually">Manually</string>
    <string name="settings_assign_pitstop_prev">Previous session</string>
    <string name="settings_assign_pitstop_next">Next session</string>

    <string name="session_button_type_pit">pit</string>
    <string name="session_button_type_next">next</string>
    <string name="session_button_type_undo">undo</string>

    <!-- Privacy Policy -->
    <string name="privacy_title">Privacy Policy</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_accept">Accept</string>
</resources>