<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.MainActivity">
    <item android:id="@+id/action_stopwatch"
          android:title="@string/holder_stopwatch"
          app:actionLayout="@layout/action_stopwatch_view"
          app:showAsAction="always" />

    <item android:id="@+id/action_start"
          android:title="@string/action_start"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_stop"
          android:title="@string/action_stop"
          app:showAsAction="never" />
    <item android:id="@+id/action_add_team"
          android:title="@string/action_add_team"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_export"
          android:title="@string/action_export"
          app:showAsAction="never" />

    <item android:id="@+id/action_reset"
          android:title="@string/action_reset"
          app:showAsAction="never" />
    <item android:id="@+id/action_clear"
          android:title="@string/action_clear"
          app:showAsAction="never" />
</menu>