<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_race"
              android:title="Race" />

        <item android:id="@+id/nav_teams"
              android:title="@string/teams_title" />

        <item android:id="@+id/nav_drivers"
              android:title="@string/drivers_title" />

        <item android:id="@+id/nav_cars"
              android:title="@string/cars_title" />

        <item android:id="@+id/nav_settings"
              android:title="@string/settings_title" />
    </group>

    <item android:enabled="false" android:title="" />

    <item android:id="@+id/nav_privacy"
          android:title="@string/privacy_title" />

    <item android:id="@+id/nav_terms"
          android:title="@string/terms_title" />
</menu>